# open-island-linux

./: .gitignore  CLAUDE.md  Cargo.toml  LAUNCH_CHECKLIST.md  README.md  STRATEGY.md  architecture.html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/skills/open-island/: SKILL.md
hook-cli/: Cargo.toml
hook-cli/src/: main.rs
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridge/: mod.rs  protocol.rs  server.rs  state.rs
src-tauri/src/hooks/: claude.rs
src/components/: PermissionDialog.svelte  SessionCard.svelte
