[package]
name = "open-island-hook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "open-island-hook"
path = "src/main.rs"

[dependencies]
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]}
