[package]
name = "open-island"
version = "0.1.0"
edition = "2021"

[lib]
name = "open_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-island"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
